WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113924
AX:File upload button has wrong label
https://bugs.webkit.org/show_bug.cgi?id=113924
Summary
AX:File upload button has wrong label
chris fleizach
Reported
2013-04-03 23:48:00 PDT
The file upload button for iOS has the wrong label
Attachments
patch
(5.64 KB, patch)
2013-04-03 23:48 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(5.69 KB, patch)
2013-04-03 23:53 PDT
,
chris fleizach
ddkilzer
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-04-03 23:48:38 PDT
Created
attachment 196443
[details]
patch
WebKit Review Bot
Comment 2
2013-04-03 23:52:38 PDT
Attachment 196443
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/platform/iphone-simulator/accessibility/file-upload-button-expected.txt', u'LayoutTests/platform/iphone-simulator/accessibility/file-upload-button.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm', u'Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm']" exit_code: 1 LayoutTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 3
2013-04-03 23:53:58 PDT
Created
attachment 196444
[details]
patch
David Kilzer (:ddkilzer)
Comment 4
2013-04-04 11:00:46 PDT
Comment on
attachment 196444
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196444&action=review
r=me, but consider adding a mac layout test (result) as well.
> Source/WebCore/ChangeLog:11 > + Test: platform/iphone-simulator/accessibility/file-upload-button.html
Shouldn't there be a Mac test as well? Or a test that runs on both Mac and iOS?
chris fleizach
Comment 5
2013-04-04 11:01:50 PDT
(In reply to
comment #4
)
> (From update of
attachment 196444
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=196444&action=review
> > r=me, but consider adding a mac layout test (result) as well. > > > Source/WebCore/ChangeLog:11 > > + Test: platform/iphone-simulator/accessibility/file-upload-button.html > > Shouldn't there be a Mac test as well? Or a test that runs on both Mac and iOS?
We already test this on the Mac with its own layout test. Due to the API differences the right label wasn't coming through for iOS, so it will only affect iOS Thanks
chris fleizach
Comment 6
2013-04-04 12:04:11 PDT
http://trac.webkit.org/changeset/147660
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug