AX:File upload button has wrong label https://bugs.webkit.org/show_bug.cgi?id=113924

Reviewed by David Kilzer.

Source/WebCore:

Allow the label and value to be returned for file upload controls on iOS.
Due to the different AX APIs, we can expose a bit more information on iOS.

Test: platform/iphone-simulator/accessibility/file-upload-button.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper stringValueShouldBeUsedInLabel]):
(-[WebAccessibilityObjectWrapper fileUploadButtonReturnsValueInTitle]):
* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase fileUploadButtonReturnsValueInTitle]):
(-[WebAccessibilityObjectWrapperBase accessibilityTitle]):

LayoutTests:

* platform/iphone-simulator/accessibility/file-upload-button-expected.txt: Added.
* platform/iphone-simulator/accessibility/file-upload-button.html: Added.



Canonical link: https://commits.webkit.org/132306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147660 268f45cc-cd09-0410-ab3c-d52691b4dbfc